# agent-team-memory

./: .env.example  .gitignore  README.md  pyproject.toml  test_mem0.py
.gitea/PULL_REQUEST_TEMPLATE/: memory.md
.gitea/workflows/: validate-memory.yml
docs/: Gitea本地部署与迁移指南.md  MCP接入.md  claude_cursor_hermes_memory_share_plan.md  team_memory_gateway_for_claude_code.md  团队记忆系统技术方案.md  快速参考卡.md  新人接入.md  管理员操作清单.md  系统说明.md  组员操作清单.md
scripts/: migrate-ids.py  onboard.py  onboard.sh
team_memory/: __init__.py  __main__.py  cli.py  config.py  gitutil.py  mcp_server.py  models.py  sources.py  store.py  templating.py
team_memory/bridges/: __init__.py  claude.py  codex.py  common.py  hermes.py  trae.py
team_memory/commands/: __init__.py  capture_cmd.py  doctor_cmd.py  inbox_cmd.py  index_cmd.py  init_cmd.py  list_cmd.py  load_cmd.py  sync_cmd.py  update_cmd.py  validate_cmd.py  web_cmd.py
team_memory/web/: __init__.py  server.py
team_memory/web/static/: index.html
templates/examples/: product-overview.md
templates/repo/: .env.example  .gitignore  CLAUDE.md  README.md
templates/repo/conflicts/: _template.md
templates/repo/inbox/: _README.md
templates/repo/rules/: code-standards.md  team-culture.md
templates/skills/auto-commit-memory/: SKILL.md
templates/types/: code.md  decision.md  error.md  project.md  skill.md
tests/: test_bridges.py  test_capture_cmd.py  test_inbox.py  test_init_cmd.py  test_list_cmd.py  test_mcp.py  test_models.py  test_store.py  test_team_safety.py
